[gd_scene load_steps=6 format=3 uid="uid://cnqfdcm1uq2av"]

[ext_resource type="Script" path="res://Scripts/Gameplay/Card/tentacle.gd" id="1_0ypsx"]
[ext_resource type="Texture2D" uid="uid://dnn63lsrfdb5k" path="res://Assets/Art/CardEffects/Bursts/tentacle-1.png" id="2_jtrdx"]
[ext_resource type="Texture2D" uid="uid://bm2hg2l14pl7l" path="res://Assets/Art/CardEffects/Bursts/tentacle-2.png" id="3_cr5po"]
[ext_resource type="Texture2D" uid="uid://cjqpq3o1t0x50" path="res://Assets/Art/CardEffects/Bursts/tentacle-3.png" id="4_kdgvl"]
[ext_resource type="Texture2D" uid="uid://b3ex3b7gegyd2" path="res://Assets/Art/CardEffects/Bursts/tentacle-4.png" id="5_6l8by"]

[node name="Tentacle" type="Node2D"]
script = ExtResource("1_0ypsx")

[node name="Tentacle1" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -250)
texture = ExtResource("2_jtrdx")

[node name="Tentacle2" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -250)
texture = ExtResource("3_cr5po")

[node name="Tentacle3" type="Sprite2D" parent="."]
position = Vector2(-9, -88)
texture = ExtResource("4_kdgvl")

[node name="Tentacle4" type="Sprite2D" parent="."]
visible = false
position = Vector2(-12, -100)
texture = ExtResource("5_6l8by")
